newclay/test/Compiler/Resolver/Fail/MissingName7/main.clay
define Foo;
overload Foo() | Blerg?() = ;
